--- a/base/univention-lib/debian/changelog
+++ b/base/univention-lib/debian/changelog
@@ -1,3 +1,9 @@
+univention-lib (9.0.0-1) unstable; urgency=medium
+
+  * Bug #51419: UCS 5: Version bump
+
+ -- Jürn Brodersen <brodersen@univention.de>  Thu, 04 Jun 2020 15:56:07 +0200
+
 univention-lib (8.0.1-36) unstable; urgency=medium
 
   * Bug #51592: fix typo in admember
