Bug #51492: add change password dialog to SAML login
TODO: for the button labels (e.g. New Password) either simplesamlphp must be patched or a new translation file should be added.
TODO: styling of error messages
TODO: new_password_retype is not checked to be equal to new_password?!
TODO: UMC-Server does not use english for Accept-Language: en; q=1, en; q=0.5?!

--- a/saml/univention-saml/debian/changelog
+++ b/saml/univention-saml/debian/changelog
@@ -1,3 +1,9 @@
+univention-saml (6.0.3-1) unstable; urgency=medium
+
+  * Bug #51492: add change password dialog to SAML login
+
+ -- Florian Best <best@univention.de>  Thu, 09 Jul 2020 08:04:51 +0200
+
 univention-saml (6.0.2-45) unstable; urgency=medium
 
   * Bug #47567: Add saml serviceproviders to groups
