--- a/base/univention-config-registry/debian/changelog
+++ b/base/univention-config-registry/debian/changelog
@@ -1,3 +1,9 @@
+univention-config-registry (15.0.0-7) unstable; urgency=low
+
+  * Bug #51680: Fix open(..., "rw") error
+
+ -- Philipp Hahn <hahn@univention.de>  Mon, 20 Jul 2020 07:04:49 +0200
+
 univention-config-registry (15.0.0-6) unstable; urgency=medium
 
   * Bug #31257: improove UCR shell performance
