--- a/management/univention-directory-manager-rest/debian/changelog
+++ b/management/univention-directory-manager-rest/debian/changelog
@@ -1,3 +1,9 @@
+univention-directory-manager-rest (10.0.0-4) unstable; urgency=medium
+
+  * Bug #51685: Migrate to Python 3
+
+ -- Florian Best <best@univention.de>  Fri, 17 Jul 2020 14:38:23 +0200
+
 univention-directory-manager-rest (10.0.0-3) unstable; urgency=medium
 
   * Bug #51419: UCS-5.0-0 version bump
